tests/ui/rename/test_rename_pair_unexpected_lit.stderr
error: Unexpected literal type `byte string`
 --> $DIR/test_rename_pair_unexpected_lit.rs:5:33
  |
5 |     #[shorthand(rename(format = b"binary"))]
  |                                 ^^^^^^^^^
